ecmascript/parser/tests/typescript-errors/type-only-import-specifier/redundant-tokens/input.ts.stderr
error: Expected ',', got 'baz'
 --> $DIR/tests/typescript-errors/type-only-import-specifier/redundant-tokens/input.ts:1:26
  |
1 | import { type foo as bar baz } from 'mod'
  |                          ^^^

